--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
+  <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
+  <script type="text/javascript" src="http://typecast.com/project_css/QcbtNRd24W/1347074c2441ed.js"></script>
+
+  <%= render 'layouts/shim' %>
+  
 </head>
 <body>
+	
+	<%= render 'layouts/header' %>
 
-<%= yield %>
+	<div class="container">
+		
+		<%= yield %>
+
+	</div>
+
+	<%= render 'layouts/footer' %>
 
 </body>
 </html>
